# orion-AI

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  demo  docker-compose.override.yml.example  docker-compose.yml  docker-orchestrator.sh  environment.yml  orion  requirements.txt  setup.py  setup_conda.sh
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: endpoints.py
backend/app/services/: chat.py  vector_rag.py
backend/app/services/ai/: cypher_rag.py
backend/app/services/cli/: __init__.py  cli.py  main.py
backend/app/services/database/: __init__.py  oracle_connection.py
backend/app/services/graph_builder/: __init__.py  graph_builder.py
backend/app/services/worker/: __init__.py  main.py  worker.py
docs/: AI_ANALYZER.md  AI_EXTRACTION.md  ARCHITECTURE.md  CLI_USAGE.md  CONDA_SETUP.md  CYPHER_RAG.md  DEVELOPMENT.md  DISTRIBUTED_WORKERS.md  DOCKER.md  DOWNLOAD_GUIDE.md  ENTITY_RELATIONSHIP_ANALYSIS.md  FRONTEND.md  INSTALLATION.md  NEO4J_SETUP_COMPLETE.md  NEO4J_USAGE.md  PENDING_DEVELOPMENT.md  PYTHON_SETUP.md  README.md  examples.cypher
frontend/: Dockerfile  README.md  app.py  package-lock.json
orion-backend/: .gitignore  ADVANCED_OPTIMIZATIONS.md  CHANGES.md  COMPLETE_OPTIMIZATION_SUMMARY.md  MIGRATION_GUIDE.md  OPTIMIZATIONS.md  OPTIMIZATION_SUMMARY.md  PRODUCTION_READINESS.md  README.md  SCRIPT_OPTIMIZATIONS.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
schema/: neo4j_schema.md
services/: README.md  __init__.py
src/: __init__.py  cli.py  graph_builder.py
(+2890 files in other folders)
